--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,34 @@
     box-sizing: border-box;
 }
 
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f3f5;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #cfd4da, #adb5bd);
+    border-radius: 10px;
+    border: 2px solid #f1f3f5;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(180deg, #adb5bd, #868e96);
+}
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #adb5bd #f1f3f5;
+}
+
+
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -28,17 +56,42 @@ button:hover {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: auto;
     padding: 20px;
 }
 
 .header {
     margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header p {
     color: #666;
+}
+
+.github-link {
+    background: #24292e;
+    color: #fff;
+    padding: 10px 14px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    transition: background 0.2s ease, transform 0.2s ease;
+    width: 20%;
+    margin: 2rem auto;
+    text-align: center;
+    justify-content: center;
+}
+
+.github-link:hover {
+    background: #000;
+    transform: translateY(-1px);
 }
 
 .controls {
@@ -46,12 +99,17 @@ button:hover {
     gap: 10px;
     margin-bottom: 24px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 20px;
+    padding: 20px;
+    height: 50vh;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 .card {
